--- a/index.css
+++ b/index.css
@@ -27,6 +27,14 @@ button {
 
 }
 
+#delete-btn {
+    background: white;
+    color: #5f9341;
+    padding: 10px 20px;
+    border: 1px solid #5f9341;
+    font-weight: bold;
+}
+
 ul {
     margin-top: 20px;
     list-style: none;
