--- a/index.css
+++ b/index.css
@@ -3,6 +3,7 @@ body {
     padding: 10px;
     font-family: Arial, Helvetica, sans-serif;
     min-width: 400px;
+    text-align: center;
 }
 
 input {
@@ -39,6 +40,7 @@ ul {
     margin-top: 20px;
     list-style: none;
     padding-left: 0;
+    text-align: left;
 }
 
 li {
